# agentic_embedded_development_toolkit

./: .gitignore  AGENTS.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: development.md
scripts/: align_markdown_tables.py  kicad2llm.py  pdfsplit.py  zubax_forum_export.py
